fixing color for dark mode

--- a/assets/sass/pages/_home.sass
+++ b/assets/sass/pages/_home.sass
@@ -401,4 +401,4 @@ footer
     #hero
         .circles
             li
-                background: rgba(220, 223, 245, 0.1)
+                background: rgba(71, 79, 133, 0.3)
