--- a/assets/sass/pages/_journal.sass
+++ b/assets/sass/pages/_journal.sass
@@ -269,4 +269,4 @@
             .loading-card
                 .animated-background
                     background: #121212
-                    background: linear-gradient(to right, #121212 8%, #161616 18%, #121212 33%)
+                    background: linear-gradient(to right, #161616 8%, #191919 18%, #161616 33%)
